--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -65,7 +65,7 @@
               <span class="info-text">Your plan will be changed from Pro to Standard by the end of the billing cycle i.e. {{(currentSubscriptionPlan&&currentSubscriptionPlan.subscription.endDate)| dateFormatPipe:'D MMMM YYYY'}}</span>
             </div>
             <div class="close-info col-2 p-0 text-right">            
-              <span>Cancel request</span>
+              <span (click)="cancelProSubscription()">Cancel request</span>
               <img src="assets/icons/close-small.svg" (click)="proInfo=true">
             </div>
           </div>
