--- a/findly-builder/src/app/components/pricing/pricing.component.scss
+++ b/findly-builder/src/app/components/pricing/pricing.component.scss
@@ -178,6 +178,7 @@
                     font-size: 12px;
                     line-height: 14px;
                     padding-right: 16px;
+                    cursor: pointer;
                 }
                 img{
                     cursor: pointer;
