FLY-2393 and FLY-2329 issues fixed

--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -139,6 +139,7 @@
                                             </ng-container>                                           
                                         </div>
                                         <div class="save-switch" (click)="saveColor(color)">Save & Apply</div>
+                                        <button class="kr-sg-button-primary btn_apply_save">Apply</button>
                                      </div>
                                 </div>
                             </div>
@@ -171,6 +172,7 @@
                                             </ng-container>                                           
                                         </div>
                                         <div class="save-switch" (click)="saveColor(color1)">Save & Apply</div>
+                                        <button class="kr-sg-button-primary btn_apply_save">Apply</button>
                                      </div>
                                 </div>
                             </div>
@@ -212,6 +214,7 @@
                                             </ng-container>                                           
                                         </div>
                                         <div class="save-switch" (click)="saveColor(color2)">Save & Apply</div>
+                                        <button class="kr-sg-button-primary btn_apply_save">Apply</button>
                                      </div>
                                 </div>
                             </div>
@@ -271,6 +274,7 @@
                                                 </ng-container>                                           
                                             </div>
                                             <div class="save-switch" (click)="saveColor(color3)">Save & Apply</div>
+                                            <button class="kr-sg-button-primary btn_apply_save">Apply</button>
                                          </div>
                                     </div>
                                 </div>
@@ -302,6 +306,7 @@
                                                 </ng-container>                                           
                                             </div>
                                             <div class="save-switch" (click)="saveColor(color4)">Save & Apply</div>
+                                            <button class="kr-sg-button-primary btn_apply_save">Apply</button>
                                          </div>
                                     </div>
                                 </div>
@@ -334,6 +339,7 @@
                                                 </ng-container>                                           
                                             </div>
                                             <div class="save-switch" (click)="saveColor(color5)">Save & Apply</div>
+                                            <button class="kr-sg-button-primary btn_apply_save">Apply</button>
                                          </div>
                                     </div>
                                 </div>
@@ -407,6 +413,7 @@
                                                     </ng-container>                                           
                                                 </div>
                                                 <div class="save-switch" (click)="saveColor(color6)">Save & Apply</div>
+                                                <button class="kr-sg-button-primary btn_apply_save">Apply</button>
                                             </div>
                                         </div>
                                     </div>
