--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -439,7 +439,7 @@
                             border: 1px solid #E4E5E7;
                             box-sizing: border-box;
                             border-radius: 4px;
-                            padding-left: 30px;
+                            padding-left: 10px;
                             &:focus{
                                 border: 1px solid #1372ff;
                             }
@@ -742,3 +742,40 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+
+
+
+::ng-deep ngb-typeahead-window{
+    border: 0 !important;
+    margin: 2px 0 0 0 !important;
+    width: 100%;
+    padding: 10px !important;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.12);
+    border-radius: 5px !important;
+    .dropdown-item{
+        padding: 4px 5px;
+        background: #FFFFFF;
+        border-radius: 2px;
+        transition: 0.2s all ease;
+        &:hover{
+            background: #F8F9FA !important;
+        }
+        &.active{
+            background: #F8F9FA !important;
+        }
+        ngb-highlight{
+            color: #9AA0A6;
+            font-weight: normal;
+            font-size: 12px;
+            line-height: 22px;
+        }
+        .ngb-highlight{
+            font-weight: normal;
+            font-size: 12px;
+            line-height: 22px;
+            color: #202124;
+        }
+    }
+
+}
