--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -718,8 +718,8 @@
     -moz-animation:spin 4s linear infinite;
     animation:spin 4s linear infinite;
     position: absolute;
-    top: 16px;
-    left: 16px;
+    top: 1px;
+    right: 1px;
 }
 
 .statusDockerBody{
