--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -250,8 +250,6 @@
                                         height: 24px;
                                         left: 1322px;
                                         top: 74px;
-
-
                                         background: #EFF0F1;
                                         border-radius: 2px;
                                         background: #EFF0F1;
@@ -662,6 +660,8 @@
                                         text-align: center;
                                         border-radius: 4px;
                                         border: 1px solid #BDC1C6;
+                                        background: transparent !important;       
+                                        width: 34px;                                 
                                         &::before{
                                             display: none;
                                         }
