--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -30,8 +30,8 @@
                         </div>   
                     </div>
                     <div class="right-sec">                       
-                        <img src="assets/icons/search-experience/top-down.svg" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'top'">
-                        <img src="assets/icons/search-experience/bottom-up.svg" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'bottom'">
+                        <img src="assets/icons/search-experience/top-down-mini.jpg" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'top'">
+                        <img src="assets/icons/search-experience/bottum-up-mini.jpg" *ngIf="searchObject.searchExperienceConfig.searchBarPosition == 'bottom'">
                     </div>
                 </div>
             </div>
