--- a/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
+++ b/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
@@ -48,16 +48,16 @@
           </div>
           <!-- <span placement="top-center" [ngbTooltip]="feature[1].desc" [container]='"body"' tooltipClass="metrics_tooltips m-0"><img src="assets/icons/overview/Info.svg"></span> -->
           <div class="body-content-plan" *ngIf="listPlanFeaturesData">
-            <div class="body-table-plan row" *ngFor="let feature of listPlanFeaturesData[0]">
+            <div class="body-table-plan row" *ngFor="let feature of listPlanFeaturesData[0]" [hidden]="feature[1].name==undefined">
               <div class="title width-24 pl-4">{{feature[1].name}}</div>
-              <div class="title width-19" *ngIf="feature[1].fullDisplayText!=undefined">{{feature[1].fullDisplayText}}</div>
-             <div class="title width-19" *ngIf="feature[2].fullDisplayText!=undefined">{{feature[2].fullDisplayText}}</div>
-              <div class="title width-19" *ngIf="feature[3].fullDisplayText!=undefined">{{feature[3].fullDisplayText}}</div>
-              <div class="title width-19" *ngIf="feature[4].fullDisplayText!=undefined">{{feature[4].fullDisplayText}}</div>
-              <div class="title width-19" *ngIf="feature[1].fullDisplayText==undefined&&feature[1].featureActive==true"><img src="assets/icons/pricing/check.svg"></div>
-              <div class="title width-19" *ngIf="feature[2].fullDisplayText==undefined&&feature[2].featureActive==true"><img src="assets/icons/pricing/check.svg"></div>
-              <div class="title width-19" *ngIf="feature[3].fullDisplayText==undefined&&feature[3].featureActive==true"><img src="assets/icons/pricing/check.svg"></div>
-              <div class="title width-19" *ngIf="feature[4].fullDisplayText==undefined&&feature[4].featureActive==true"><img src="assets/icons/pricing/check.svg"></div>
+              <div class="title width-19" *ngIf="feature[1].fullDisplayText!=undefined&&feature[1].fullDisplayText!='-'||['none','limited'].includes(feature[1].access)">{{feature[1].access=='none'?'-':feature[1].fullDisplayText}}</div>
+              <div class="title width-19" *ngIf="feature[2].fullDisplayText!=undefined&&feature[2].fullDisplayText!='-'||['none','limited'].includes(feature[2].access)">{{feature[2].access=='none'?'-':feature[2].fullDisplayText}}</div>
+              <div class="title width-19" *ngIf="feature[3].fullDisplayText!=undefined&&feature[3].fullDisplayText!='-'||['none','limited'].includes(feature[3].access)">{{feature[3].access=='none'?'-':feature[3].fullDisplayText}}</div>
+              <div class="title width-19" *ngIf="feature[4].fullDisplayText!=undefined&&feature[4].fullDisplayText!='-'||['none','limited'].includes(feature[4].access)">{{feature[4].access=='none'?'-':feature[4].fullDisplayText}}</div>
+              <div class="title width-19" *ngIf="feature[1].access!='none'&&['full','custom'].includes(feature[1].access)&&['-',undefined].includes(feature[1].fullDisplayText)"><img src="assets/icons/pricing/check.svg"></div>
+              <div class="title width-19" *ngIf="feature[2].access!='none'&&['full','custom'].includes(feature[2].access)&&['-',undefined].includes(feature[2].fullDisplayText)"><img src="assets/icons/pricing/check.svg"></div>
+              <div class="title width-19" *ngIf="feature[3].access!='none'&&['full','custom'].includes(feature[3].access)&&['-',undefined].includes(feature[3].fullDisplayText)"><img src="assets/icons/pricing/check.svg"></div>
+              <div class="title width-19" *ngIf="feature[4].access!='none'&&['full','custom'].includes(feature[4].access)&&['-',undefined].includes(feature[4].fullDisplayText)"><img src="assets/icons/pricing/check.svg"></div>
             </div>
         </div>
         </div>
@@ -211,16 +211,8 @@
       </div>
         <div class="excess-table-data">
           <div class="excess-header">FEATURES</div>
-          <div class="excess-table-body col-12 row">
-            <div class="excess-type col-6">Document</div>
-            <div class="excess-name col-6">Excess</div>
-          </div>
-          <div class="excess-table-body col-12 row">
-            <div class="excess-type col-6">Index</div>
-            <div class="excess-name col-6">Excess</div>
-          </div>
-          <div class="excess-table-body col-12 row">
-            <div class="excess-type col-6">Document</div>
+          <div class="excess-table-body col-12 row" *ngFor="let feature of featuresExceededUsage">
+            <div class="excess-type col-6">{{feature}}</div>
             <div class="excess-name col-6">Excess</div>
           </div>
         </div>
