--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -19,6 +19,7 @@
 </perfect-scrollbar>
 </ng-container>
     <div class="header-sec col-12 row m-0"  *ngIf="(channnelConguired && channnelConguired.length)">
+        <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
         <div class="col-4 p-0 title-header">{{"credentials.manage_credentials" | translate}}</div>
          <div class="col-8 right-sec p-0">            
                 <!-- <div class="kr-sg-input-text m-0" [ngClass]="{'active': showSearch}">
