--- a/findly-builder/src/app/components/invoices/invoices.component.html
+++ b/findly-builder/src/app/components/invoices/invoices.component.html
@@ -4,6 +4,7 @@
         <span class="please-wait-message">{{'Please Wait!' | translate}}</span>
     </div>
     <div class="header-sec">
+        <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
         <div class="title">Invoices</div>
         <!-- <div class="d-flex align-items-center">
             <div class="kr-sg-input-search" [ngClass]="{'d-none': !showSearch}">
