--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -5,6 +5,7 @@
   </div>
   <div *ngIf="loadingContent1">
     <div class="header-sec row"  *ngIf='listOfExperiments.length>0||filterExperiments.length>0'>
+      <!-- <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey> -->
       <div class="col-6 left-sec p-0">
         <div class="tab-sec d-flex">
           <b>Experiments</b>
