--- a/findly-builder/src/app/components/general-settings/general-settings.component.html
+++ b/findly-builder/src/app/components/general-settings/general-settings.component.html
@@ -1,4 +1,5 @@
 <div class="g-settings-container">
+    <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
     <div class="header-title">General Settings</div>
     <perfect-scrollbar class="action-body-scroll">
         <div class="settings-general-data">
