--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -121,7 +121,7 @@
                                         [(colorPicker)]="color"
                                         [cpOutputFormat]="'hex'"
                                         [cpAlphaChannel]="'always'"
-                                        (colorPickerClose)="onEventLog('inputbox1', $event)"
+                                        (colorPickerChange)="selectedColor=$event"
                                         [cpCloseClickOutside]="false"
                                         [(cpToggle)]='toggle'
                                         readonly
@@ -135,11 +135,11 @@
                                         </div>
                                         <div class="selected-previous-colors flex-wrap">
                                             <ng-container *ngFor="let col of searchObject.searchWidgetConfig.userSelectedColors">
-                                                <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('inputbox1', col);color=col;"></div>
+                                                <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="selectedColor=col;applyColor('inputbox1');color=col;"></div>
                                             </ng-container>                                           
                                         </div>
-                                        <div class="save-switch" (click)="saveColor(color)">Save & Apply</div>
-                                        <button class="kr-sg-button-primary btn_apply_save">Apply</button>
+                                        <div class="save-switch" (click)="applyColor('inputbox1','save')">Save & Apply</div>
+                                        <button class="kr-sg-button-primary btn_apply_save" (click)="applyColor('inputbox1')">Apply</button>
                                      </div>
                                 </div>
                             </div>
@@ -152,8 +152,7 @@
                                         [(colorPicker)]="color1"
                                         [cpOutputFormat]="'hex'"
                                         [cpAlphaChannel]="'always'"
-                                        (colorPickerOpen)="onEventLog('inputbox2', $event)"
-                                        (colorPickerClose)="onEventLog('inputbox2', $event)"        
+                                        (colorPickerChange)="selectedColor=$event"        
                                         [cpCloseClickOutside]="false"
                                         [(cpToggle)]='toggle1'                              
                                         readonly
@@ -168,11 +167,11 @@
                                         </div>
                                         <div class="selected-previous-colors flex-wrap">
                                             <ng-container *ngFor="let col of searchObject.searchWidgetConfig.userSelectedColors">
-                                                <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('inputBox2', col);color1=col;"></div>
+                                                <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="selectedColor=col;applyColor('inputbox2');color1=col;"></div>
                                             </ng-container>                                           
                                         </div>
-                                        <div class="save-switch" (click)="saveColor(color1)">Save & Apply</div>
-                                        <button class="kr-sg-button-primary btn_apply_save">Apply</button>
+                                        <div class="save-switch" (click)="applyColor('inputbox2','save')">Save & Apply</div>
+                                        <button class="kr-sg-button-primary btn_apply_save" (click)="applyColor('inputbox2')">Apply</button>
                                      </div>
                                 </div>
                             </div>
@@ -194,7 +193,7 @@
                                         [(colorPicker)]="color2"
                                         [cpOutputFormat]="'hex'"
                                         [cpAlphaChannel]="'always'"
-                                        (colorPickerClose)="onEventLog('placeholder', $event)"
+                                        (colorPickerChange)="selectedColor=$event"   
                                         [cpCloseClickOutside]="false"
                                         [(cpToggle)]='toggle2'
                                         readonly
@@ -210,11 +209,11 @@
                                         </div>
                                         <div class="selected-previous-colors flex-wrap">
                                             <ng-container *ngFor="let col of searchObject.searchWidgetConfig.userSelectedColors">
-                                                <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('placeholder', col);color2=col;"></div>
+                                                <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="selectedColor=col;applyColor('placeholder');color2=col;"></div>
                                             </ng-container>                                           
                                         </div>
-                                        <div class="save-switch" (click)="saveColor(color2)">Save & Apply</div>
-                                        <button class="kr-sg-button-primary btn_apply_save">Apply</button>
+                                        <div class="save-switch" (click)="applyColor('placeholder','save')">Save & Apply</div>
+                                        <button class="kr-sg-button-primary btn_apply_save" (click)="applyColor('placeholder')">Apply</button>
                                      </div>
                                 </div>
                             </div>
@@ -254,7 +253,7 @@
                                             [(colorPicker)]="color3"
                                             [cpOutputFormat]="'hex'"
                                             [cpAlphaChannel]="'always'"
-                                            (colorPickerClose)="onEventLog('buttonTextColor', $event)"
+                                            (colorPickerChange)="selectedColor=$event" 
                                             [cpCloseClickOutside]="false"
                                             [(cpToggle)]='toggle3'
                                             readonly                                            
@@ -270,11 +269,11 @@
                                             </div>
                                             <div class="selected-previous-colors flex-wrap">
                                                 <ng-container *ngFor="let col of searchObject.searchWidgetConfig.userSelectedColors">
-                                                    <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('buttonTextColor', col);color3=col;"></div>
+                                                    <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="selectedColor=col;applyColor('buttonTextColor');color3=col;"></div>
                                                 </ng-container>                                           
                                             </div>
-                                            <div class="save-switch" (click)="saveColor(color3)">Save & Apply</div>
-                                            <button class="kr-sg-button-primary btn_apply_save">Apply</button>
+                                            <div class="save-switch" (click)="applyColor('buttonTextColor','save')">Save & Apply</div>
+                                            <button class="kr-sg-button-primary btn_apply_save" (click)="applyColor('buttonTextColor')">Apply</button>
                                          </div>
                                     </div>
                                 </div>
@@ -286,7 +285,7 @@
                                             [(colorPicker)]="color4"
                                             [cpOutputFormat]="'hex'"
                                             [cpAlphaChannel]="'always'"
-                                            (colorPickerClose)="onEventLog('buttonFill', $event)"
+                                            (colorPickerChange)="selectedColor=$event" 
                                             [cpCloseClickOutside]="false"
                                             [(cpToggle)]='toggle4'
                                             readonly
@@ -302,11 +301,11 @@
                                             </div>
                                             <div class="selected-previous-colors flex-wrap">
                                                 <ng-container *ngFor="let col of searchObject.searchWidgetConfig.userSelectedColors">
-                                                    <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('buttonFill', col);color4=col;"></div>
+                                                    <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="selectedColor=col;applyColor('buttonFill');color4=col;"></div>
                                                 </ng-container>                                           
                                             </div>
-                                            <div class="save-switch" (click)="saveColor(color4)">Save & Apply</div>
-                                            <button class="kr-sg-button-primary btn_apply_save">Apply</button>
+                                            <div class="save-switch" (click)="applyColor('buttonFill','save')">Save & Apply</div>
+                                            <button class="kr-sg-button-primary btn_apply_save" (click)="applyColor('buttonFill')">Apply</button>
                                          </div>
                                     </div>
                                 </div>
@@ -319,7 +318,7 @@
                                             [(colorPicker)]="color5"
                                             [cpOutputFormat]="'hex'"
                                             [cpAlphaChannel]="'always'"
-                                            (colorPickerClose)="onEventLog('buttonBorder', $event)"
+                                            (colorPickerChange)="selectedColor=$event" 
                                             [cpCloseClickOutside]="false"
                                             [(cpToggle)]='toggle5'
                                             readonly
@@ -335,11 +334,11 @@
                                             </div>
                                             <div class="selected-previous-colors flex-wrap">
                                                 <ng-container *ngFor="let col of searchObject.searchWidgetConfig.userSelectedColors">
-                                                    <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('buttonBorder', col);color5=col;"></div>
+                                                    <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="selectedColor=col;applyColor('buttonBorder');color5=col;"></div>
                                                 </ng-container>                                           
                                             </div>
-                                            <div class="save-switch" (click)="saveColor(color5)">Save & Apply</div>
-                                            <button class="kr-sg-button-primary btn_apply_save">Apply</button>
+                                            <div class="save-switch" (click)="applyColor('buttonBorder','save')">Save & Apply</div>
+                                            <button class="kr-sg-button-primary btn_apply_save" (click)="applyColor('buttonBorder')">Apply</button>
                                          </div>
                                     </div>
                                 </div>
@@ -394,7 +393,7 @@
                                                 [(colorPicker)]="color6"
                                                 [cpOutputFormat]="'hex'"
                                                 [cpAlphaChannel]="'always'"
-                                                (colorPickerClose)="onEventLog('msgColor', $event)"
+                                                (colorPickerChange)="selectedColor=$event" 
                                                 [cpCloseClickOutside]="false"
                                                 [(cpToggle)]='toggle6'
                                                 readonly
@@ -409,11 +408,11 @@
                                                 </div>
                                                 <div class="selected-previous-colors flex-wrap">
                                                     <ng-container *ngFor="let col of searchObject.searchWidgetConfig.userSelectedColors">
-                                                        <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('msgColor', col);color6=col;"></div>
+                                                        <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="selectedColor=col;applyColor('msgColor');color6=col;"></div>
                                                     </ng-container>                                           
                                                 </div>
-                                                <div class="save-switch" (click)="saveColor(color6)">Save & Apply</div>
-                                                <button class="kr-sg-button-primary btn_apply_save">Apply</button>
+                                                <div class="save-switch" (click)="applyColor('msgColor','save')">Save & Apply</div>
+                                                <button class="kr-sg-button-primary btn_apply_save" (click)="applyColor('msgColor')">Apply</button>
                                             </div>
                                         </div>
                                     </div>
