--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -6,10 +6,10 @@
     <ng-container *ngIf="loadingTraits1">  
     
     <!-- TABLE CONTENT -->
-    <div class="traits">
-        
+    <div class="traits">        
         <div class="table-list-content" >                         
             <div class="seach_add_feild">
+                <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
                 <div class="title">Traits</div>
                 <div class="d-flex align-items-center" *ngIf="traits.traitGroups &&  traits.traitGroups.length">
                     <!-- <div class="kr-sg-input-search m-0" [ngClass]="{'active': showSearch}">                               
